# coq-weqv

./: .gitignore  Makefile
quals/: Makefile  darais-quals.tex
quals/code/: .exrc  Classes.hs  Datatypes.hs  Main.hs  Makefile  Util.hs  mai.cabal
quals/code/Classes/: JoinLattice.hs  MapLike.hs  Monad.hs  MonadPlus.hs  MonadState.hs  MonadStateSpace.hs  PartialOrder.hs  Pointed.hs  SetLike.hs
quals/code/Datatypes/: Constraint.hs  Identity.hs  ListSet.hs  Map.hs  Maybe.hs  Point.hs  Proxy.hs  Set.hs  State.hs  Tuple.hs
quals/code/Lang/: Abstract.hs  CPS.hs  Concrete.hs  Monadic.hs
quals/tex/: Makefile  darais-quals.bbl  darais-quals.blg  darais-quals.tex  davdar.bib
quals/tex/hs/: SSAbstract.hs  SSConcrete1.hs  SSConcrete2.hs  StepAbstract.hs  StepConcreteAtom.hs  StepConcreteCall.hs  StepConcreteOp.hs  StepConcreteStep.hs
quals/tex/lib/: setup.tex
src/: Makefile  Makefile.coq
src/AAI/: Notation.v
src/AAI/Classes/: Addressable.v  MonadEnvState.v  MonadStoreState.v  MonadTimeState.v  Transition.v
src/AAI/Data/: TimeStateMonad.v
src/FP/: Core.v
src/NoQ/: Antisymmetric.v  Applicative.v  Arrow.v  DecEq.v  Equivalence.v  Eqv.v  Function.v  Functor.v  GaloisConnection.v  LibReflexive.v  List.v  ListInstances.v  MArrow.v  Monad.v  MonadFail.v  MonadMorphism.v  MonadPlus.v  MonadReader.v  MonadState.v  Monotonic.v  MonotonicFunction.v  Option.v  PArrow.v  PartialOrder.v  Pointed.v  PreOrder.v  Prop.v  ProperFunction.v  Reflexive.v  Relation.v  String.v  Symmetric.v  Transitive.v  Traversable.v  Type.v  Universe.v  WEqv.v  WeakEquivalence.v
(+85 files in other folders)
