author:              David Darais
build-type:          Simple
cabal-version:       >=1.10
category:            Language
license-file:        LICENSE
license:             BSD3
maintainer:          david.darais@gmail.com
name:                mai
synopsis:            Monadic Abstract Interpretation
version:             0.1.0.0

library
  exposed-modules:     Main
  build-depends:       base == 4.7.*
                     , containers == 0.5.*
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-amp -fno-warn-orphans
  default-extensions:  ScopedTypeVariables
                     , GADTs
                     , TypeFamilies
                     , FlexibleContexts
                     , MultiParamTypeClasses
                     , LambdaCase
                     , FlexibleInstances
                     , ConstraintKinds
                     , TupleSections
